# superMario64-TAS

./: .gitignore  README.md
decomp/: README.md
experiments/wall_kicks_approach_search/: README.md  interaction-results.json  kick-recovery-results.json  results.json
experiments/wall_kicks_beam_search/: README.md  postcontact-results.json  results.json
experiments/wall_kicks_frame_delete/: README.md  results.json
experiments/wall_kicks_landing_search/: README.md  results.json
experiments/wall_kicks_next_search/: README.md  results.json
experiments/wall_kicks_retime/: README.md  results.json
experiments/wall_kicks_touch_search/: README.md  results.json
notes/: bismuth.md  console-first.md  decomp-map.md  emulators-and-tools.md  kaze-emanuar.md  pannenkoek2012.md  rules-and-decomp.md  tas-catalog.md  tasvideos-priorities.md  windows-setup.md
notes/research/: high-value-tas.md  wall-kicks-speedup-experiment.md
notes/rules/: README.md  speedrun-com-categories.json  speedrun-com-categories.txt  speedrun-com-variables.json  speedrun-com-variables.txt  tasvideos-MovieRules-raw.txt  tasvideos-MovieRules.md  tasvideos-Mupen-raw.txt
roms/: README.md
tools/: README.md
tools/research/: README.md  air_physics.py  check_log.py  constants.py  plot_approach_results.py  plot_speedup_results.py  pu_nav.py  speedup_retime.py  speedup_search.py  squish_scan.md  verify_experiment.py  wall_punch.py  wkw_approach_search.py  wkw_beam_search.py  wkw_landing_search.py  wkw_next_search.py  wkw_touch_search.py
tools/research/beam/: CMakeLists.txt  wkw_beam_sim.cpp
(+20 files in other folders)
